--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .input {
+    @apply rounded-xl border-2 border-blue-200 duration-300 hover:border-blue-500 px-3 py-2 text-lg;
+  }
+}
